recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:4: error: not found: value dst1
    hanoi4(height-2, src, dst1, other, dst2)
                          ^SplitHanoi1:7: error: not found: value dst
    move(dst, other)
         ^SplitHanoi1:8: error: not found: value dst1
    hanoi4(height-2, dst1, other, src, dst2)
                     ^SplitHanoi1:22: error: not found: value dst
    splitHanoi(height-2, other, src, dst, dst2)
                                     ^SplitHanoi1:26: error: not found: value mode
    mode(src, dst2)
    ^